--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://aoun-backend-production-100f.up.railway.app
+
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
